[project]
name = "animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "ipywidgets>=8.1.8",
    "manim>=0.19.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
]
